--- a/requirements.txt
+++ b/requirements.txt
@@ -186,7 +186,7 @@ torchvision==0.25.0
 tornado==6.5.4
 tqdm==4.67.3
 traitlets==5.14.3
-transformers==5.1.0
+transformers==4.38.2
 triton==3.6.0
 Twisted==25.5.0
 txaio==25.12.2
@@ -207,3 +207,6 @@ zipp==3.23.0
 zope.interface==8.2
 
 ultralytics==8.3.70
+onnxruntime-gpu>=1.17.0
+gfpgan>=1.3.8
+insightface>=0.7.3
